--- a/.github/workflows/texLive.yml
+++ b/.github/workflows/texLive.yml
@@ -2,3 +2,31 @@
   with:
     root_file: |
       cv.tex
+name: Manual
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Fix stupidity
+      run: |
+        cp AUTHORS AUTHORS.
+        cp LICENSE LICENSE.
+    - name: Compile LaTeX
+      uses: xu-cheng/latex-action@v3
+      with:
+        working_directory: 2024
+        root_file: cv.tex
+    - uses: actions/upload-artifact@v4
+      with:
+        name: 2024
+        path: 2024/HITESH_A_H_2024.pdf
