--- a/.github/workflows/texLive.yml
+++ b/.github/workflows/texLive.yml
@@ -1,18 +1,15 @@
-name: Latex_Action
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push]
 
 jobs:
-  build:
-
+  latex-job:
     runs-on: ubuntu-latest
-
+    name: A job to Compile Latex file
     steps:
-      - uses: xu-cheng/latex-action@v3
-    with:
-      root_file: |
-        2024/cv.tex
+    - uses: actions/checkout@v1
+    - name: Compilation
+      uses: vinay0410/tectonic-action@master
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tex_path: '2024/file.tex'
+        push: 'yes'
