--- a/.github/workflows/texLive.yml
+++ b/.github/workflows/texLive.yml
@@ -1,15 +1,13 @@
+name: Build LaTeX document
 on: [push]
-
 jobs:
-  latex-job:
+  build_latex:
     runs-on: ubuntu-latest
-    name: A job to Compile Latex file
     steps:
-    - uses: actions/checkout@v1
-    - name: Compilation
-      uses: vinay0410/tectonic-action@master
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tex_path: '2024/cv.tex'
-        push: 'yes'
+      - name: Set up Git repository
+        uses: actions/checkout@v2
+      - name: Compile LaTeX document
+        uses: repaction/texlive@main
+        with:
+          tex_files: |
+            2024/cv.tex
